--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,7 @@
 
 <h3>Login</h3>
 
+<a href="tela2.html">Tela 2</a>
 <form method="post">
 	<input name="txtName" placeholder="Usuario"/>
 	<input name="txtPassword" placeholder="Senha" type="password"/>
