--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,18 +3,17 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
-<link rel="stylesheet" type="text/css" href="css/index.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
 
-<h3>Login</h3>
-
-<a href="tela2.html">Tela 2</a>
-<form method="post">
-	<input name="txtName" placeholder="Usuario"/>
-	<input name="txtPassword" placeholder="Senha" type="password"/>
-	<input type="submit" id="btnEnviar">
+<h1>Login</h1>
+<form method="post" action="usu">
+	<input name="name" placeholder="Usuario"/>
+	<input name="password" placeholder="Senha" type="password"/>
+	<input type="submit" id="btnEnviar" value="Login"/>
 </form>
+<a href="tela-cadastro.html">Cadastrar</a>
 </body>
 </html>
