--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<script type="text/javascript" src="js/index.js"></script>
-</head>
-<body>
-
-<h1>Login</h1>
-<form method="post" action="usu">
-	<input name="name" placeholder="Usuario"/>
-	<input name="password" placeholder="Senha" type="password"/>
-	<input type="submit" id="btnEnviar" value="Login"/>
-</form>
-<a href="tela-cadastro.html">Cadastrar</a>
-</body>
+	<head>		
+		<title>Insert title here</title>		
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script type="text/javascript" src='js/index.js'></script>		
+	</head>
+	<body>		
+	
+		<h1>Login</h1>
+		<form method="post" action="usuarios">
+			<input name="name" placeholder="Usuario"/>
+			<input name="password" placeholder="Senha" type="password"/>
+			<input type="submit" id="btnEnviar" value="Login"/>
+		</form>
+		<a href="tela-cadastro.html">Cadastrar</a>		
+	</body>
 </html>
