--- a/src/main/webapp/tela-cadastro.html
+++ b/src/main/webapp/tela-cadastro.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">	
 </head>
 
 <body>
 	<h1>Novo Usuário</h1>
 
-	<form method="post" action="UsuarioController">
+	<form method="post" action="TelaCadastroController">
 		<input name="name" placeholder="Usuario" /> 
 		<input name="password" placeholder="Senha" type="password" /> 
 		<input type="submit" id="btnEnviar" value="Cadastrar" />
