Tentando add banco de dados

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,17 +2,10 @@
 <html>
 	<head>		
 		<title>Insert title here</title>		
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<script type="text/javascript" src='js/index.js'></script>		
+		<link rel="stylesheet" type="text/css" href="css/style.css">		
 	</head>
 	<body>		
-	
-		<h1>Login</h1>
-		<form method="post" action="usuarios">
-			<input name="name" placeholder="Usuario"/>
-			<input name="password" placeholder="Senha" type="password"/>
-			<input type="submit" id="btnEnviar" value="Login"/>
-		</form>
+		<h1>Pagina Principal</h1>		
 		<a href="tela-cadastro.html">Cadastrar</a>		
 	</body>
 </html>
