--- a/src/main/webapp/tela-cadastro.html
+++ b/src/main/webapp/tela-cadastro.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css">	
+	<script src="js/cadastro.js"></script>
 </head>
 
 <body>
 	<h1>Novo Usuário</h1>
 
-	<form method="post" action="TelaCadastroController">
+	<form method="post" action="UsuarioController">
 		<input name="name" placeholder="Usuario" /> 
 		<input name="password" placeholder="Senha" type="password" /> 
 		<input type="submit" id="btnEnviar" value="Cadastrar" />
